tests/expectations/compiler/integers/i16/max_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372008]: The value 32768 is not a valid `i16`
    --> compiler-test:5:22
     |
   5 |         let a: i16 = 32768i16;
     |                      ^^^^^^^^
"""]
